[tool.poetry]
name = "pywebidl2"
version = "0.1.7"
description = "WebIDL tool"
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/PrVrSs/pywebidl2"
homepage = "https://github.com/PrVrSs/pywebidl2"

keywords = [
  "WebIDL",
  "parser",
  "ast"
]

[tool.poetry.dependencies]
python = "^3.10"

antlr4-python3-runtime = "4.11.1"
click = "^8.1.3"
more-itertools = "^8.14.0"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.990"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
